2012-10-08	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c: fixed handling of renamed files
	  - read in databases in one go
	  - read in old database at the end

2012-10-06	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added new report_base16 option

2012-09-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c: support older versions of e2fsprogs

2012-06-19	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/db_file.c: added missing format string to dofprintf calls

2011-10-02	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added new detailed_init_report option

2011-09-29	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* configure.in, include/aide.h, src/db_file.c:
	 - fixed 'undef' compiler warnings

2011-09-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c, include/do_md.h, src/do_md.c:
	  - moved selinux2line function to src/do_md.c
	  - moved xattrs2line function to src/do_md.c
	* src/db_file.c:
	  - declare db_writeacl only if WITH_ACL is defined

2011-09-23	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/db_disk.h, src/db_disk.c, src/db.c:
	  - fixed 'unused-parameter' compiler warning
	* include/db_disk.h, src/db_disk.c:
	  - removed unused functions (db_disk_read_spec, db_writespec_disk,
	    db_writeline_disk, db_close_disk)
	* src/db_file.c:
	  - fixed 'unused-but-set-variable' compiler warnings
	* src/gen_list.c, include/do_md.h, src/do_md.c:
	  - call acl2line only if WITH_ACL is defined

2011-09-22	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/be.c:
	  - declared static functions static
	* src/commandconf.c:
	  - fixed 'unused-but-set-variable' compiler warning
	* src/compare_db.c:
	  - fixed some 'format' compiler warnings
	* src/db.c:
	  - fixed 'unused-but-set-variable' compiler warnings

2011-09-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/aide.h, src/aide.c:
	  - declared static functions static

2011-09-20	Hannes von Haugwitz <hannes@vonhaugwitz.com>