@@ -21,6 +21,7 @@ Version 0.16 (NOT_YET_RELEASED)
 	* Changed report if aide found no changes
 	* Added info about number of entries if aide found no changes or
 	  the database has been initialized
+	* Added new default group X
 	* Bug fixes
 
 Version 0.15.1
