@@ -1,3 +1,6 @@
+2012-10-10	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Added new default group X
+
 2012-10-08	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/gen_list.c: fixed handling of renamed files
 	  - read in databases in one go
